added filtering to the recipes model
